Fix Site Navigation position at home on small screen

--- a/src/css/content/_section-footer.scss
+++ b/src/css/content/_section-footer.scss
@@ -2,12 +2,9 @@
 .section-footer {
   @extend %link-underline-removal;
 
-  $r: $ratio-text-small;
-  $h: rem($r * $line-height-root-content);
-
-  font-size: rem($r);
+  font-size: rem($ratio-text-site-navigation);
   position: relative;
-  top: $margin-top-h1;
+  top: $top-site-navigation;
 
   p {
     margin-bottom: 0;
@@ -16,10 +13,10 @@
   @media (min-width: $breakpoint-content) {
     float: right;
     margin-left: $width-gap;
-    top: (($height-first-heading-content - $h) / 2);
+    top: $top-site-navigation-content;
   }
 
   @media (min-width: $breakpoint-full) {
-    top: (($height-first-heading-full - $h) / 2);
+    top: $top-site-navigation-full;
   }
 }
