--- a/src/css/var/_ratio.scss
+++ b/src/css/var/_ratio.scss
@@ -46,6 +46,8 @@ $line-height-logo: $line-height-large;
 
 
 // Content
+$ratio-text-site-navigation: $ratio-text-small;
+
 $ratio-text-first-heading-content: $ratio-text-huge;
 $ratio-text-first-heading-full: $ratio-text-gargantuan;
 $line-height-first-heading: $line-height-tiny;
