--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -83,8 +83,14 @@ $height-logo: rem($ratio-text-logo * $line-height-logo);
 
 
 // Content
+$height-site-navigation: rem($ratio-text-site-navigation * $line-height-root-content);
+$top-site-navigation: $margin-top-h1;
+
 $height-first-heading-content: rem($line-height-first-heading * $ratio-text-first-heading-content);
 $height-first-heading-full: rem($line-height-first-heading * $ratio-text-first-heading-full);
+
+$top-site-navigation-content: (($height-first-heading-content - $height-site-navigation) / 2);
+$top-site-navigation-full: (($height-first-heading-full - $height-site-navigation) / 2);
 
 
 // Global Footer
